# Heitz-et-al.-2019-Bluenoise

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ldbnsampler.cpp
dependencies/: CMakeLists.txt
include/: display.hpp  optimizer.hpp  pmj02_16spp_2d.h  rank1_1024spp_10d.h  sobol_64spp_64d.h  utils.hpp
include/glad/: glad.h
shaders/: display.frag  display.vert  optimizer.comp
src/: display.cpp  main.cpp  optimizer.cpp
src/glad/: glad.c
